# Strawberry-Harvesting-Manipulator

./: README.md
co_robot/: CMakeLists.txt  package.xml
co_robot/scripts/: roi_point_cloud.py  tcp_srv.py
co_robot/src/: tcp_srv.cpp
co_robot/srv/: vision_robot.srv
robo/: .setup_assistant  CMakeLists.txt  package.xml
robo/config/: fake_controllers.yaml  gazebo_robo003.urdf  kinematics.yaml  ompl_planning.yaml  robo003.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
robo/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
robo003/: CMakeLists.txt  package.xml
robo003/launch/: display.launch  gazebo.launch
robo003/meshes/: base_link.STL  joint1.STL  joint2.STL  joint3.STL  joint4.STL  joint5.STL  joint6.STL
robo003/urdf/: robo003.csv  robo003.urdf
robot_vision/: CMakeLists.txt  package.xml
robot_vision/launch/: detect.launch
robot_vision/scripts/: demo.py
